# rocm-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.TXT  MANIFEST.md  PSScriptAnalyzerSettings.psd1  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  about.hbs  about.toml  ci-harden-actions.md  ci-manual-e2e.md  docs-improve-readme-getting-started.md  install.ps1  install.sh  licenserc-md-header.toml  licenserc-md.toml  licenserc.toml  persist-app-dev-ci-runner.md  ruff.toml  test-add-e2e-robot-framework.md  test-e2e-tui-cucumber.md
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  demo-gifs.yml  nightly.yml  release.yml
apps/rocm/: Cargo.toml  build.rs
apps/rocm/src/: automations.rs  bootstrap.rs  comfyui.rs  dash.rs  dash_seam.rs  endpoint_keys.rs  logging.rs  main.rs  provider_keys.rs  providers.rs  serve_summary.rs  therock.rs  tui.rs  uninstall.rs
apps/rocm/src/remote/: bootstrap.rs  mod.rs  transport.rs
apps/rocm/tests/: daemon_run.rs
apps/rocmd/: Cargo.toml
apps/rocmd/src/: lib.rs  main.rs
crates/e2e-report/: Cargo.toml
crates/e2e-report/src/: lib.rs
crates/rocm-core/: Cargo.toml  build.rs
crates/rocm-core/src/: diagnose.rs  examine.rs  fix.rs  lib.rs  model_catalog.json  openmpi.rs  proc_lifecycle.rs  runtime.rs  uv.rs
crates/rocm-dash-collectors/: Cargo.toml
crates/rocm-dash-collectors/src/: amd_smi.rs  bench_load.rs  bench_tail.rs  cgroup.rs  docker.rs  engine_registry.rs  host.rs  lemonade.rs  lib.rs  llama_slots.rs  parallel.rs  proc_scan.rs  sysfs.rs  vllm_log.rs  vllm_prom.rs
crates/rocm-dash-collectors/tests/: vllm_prom_http.rs
crates/rocm-dash-core/: Cargo.toml
crates/rocm-dash-core/src/: bench_rollup.rs  bench_schema.rs  config.rs  efficiency.rs  lib.rs  metrics.rs  partition.rs  persist.rs  protocol.rs  state.rs  traits.rs  vram.rs
crates/rocm-dash-daemon/: Cargo.toml
crates/rocm-dash-daemon/src/: bench_ring.rs  demo.rs  lib.rs  persist.rs  registry.rs  runner.rs  server.rs  snapshot_ring.rs  transport.rs
crates/rocm-dash-daemon/tests/: end_to_end.rs
crates/rocm-dash-tui/: Cargo.toml
crates/rocm-dash-tui/examples/: gen_cast.rs  gen_mockups.rs  gen_screenshots.rs
crates/rocm-dash-tui/src/: agent.rs  app.rs  client.rs  jobs.rs  lib.rs  llm.rs  reconnect.rs  replay.rs  skills.rs  tool_exec.rs  transport.rs
crates/rocm-dash-tui/src/app/: chat.rs  mod.rs  slash.rs  summary.rs
crates/rocm-dash-tui/src/ui/: approval.rs  automations_manager.rs  bench.rs  bench_run.rs  command_screen.rs  config_manager.rs  core_bars.rs  dock.rs  doctor_manager.rs  engine_manager.rs  examine_manager.rs  exec.rs  folder_browser.rs  format.rs  gradient.rs  heatmap.rs  install_manager.rs  instance_list.rs  job_console.rs  launcher.rs  logs_view.rs  mod.rs  modal.rs  model_picker.rs  monitor.rs  onboarding.rs  panel.rs  runtime_manager.rs  serve_wizard.rs  services_manager.rs  sparkline.rs  spinner.rs  theme.rs  update_manager.rs  widgets.rs
crates/rocm-dash-tui/src/ui/tabs/: action.rs  bench.rs  chat.rs  hardware.rs  home.rs  instances.rs  mod.rs  observe.rs  overview.rs  pane.rs  rocm.rs  serving.rs
crates/rocm-dash-tui/tests/: dash_characterization.rs  dash_journeys.rs  wave0_job_bridge.rs
crates/rocm-dash-tui/tests/fixtures/: lemonade_release_latest.json
crates/rocm-engine-protocol/: Cargo.toml
docs/: atom.md  automations.md  ci-hardware-testing.md  codex-vendoring-plan.md  commit-signatures.md  cosmopolitan-universal-binary-plan.md  current-tui-therock-correction-plan.md  dash-parity-checklist.md  dash-parity-map.md  demos.md  engine-plugins.md  implementation-completion-audit.md  llm-tool-use.md  manual-testing.md  release-trust.md  rocm-dash-merge-status.md  sglang.md  testing.md  tui-retirement-checklist.md  upstream-codex-sync.md  ux-guidelines.md  vllm.md  wsl.md
docs/design/: README.md  (+4 more)
e2e-report-29209242248-corrected/: consolidated.html  summary.md
engines/atom/: Cargo.toml
engines/atom/src/: lib.rs  main.rs
engines/lemonade/: Cargo.toml
engines/lemonade/src/: lib.rs  main.rs
engines/llama-cpp/: Cargo.toml
engines/llama-cpp/src/: lib.rs  main.rs
plans/: cosmopolitan-runtime-boundary-plan.md  dash-ia-redesign-plan.md  dash-modal-and-scroll-plan.md  rocm-bench-load-generator.md  rocm-cli-implementation-plan.md  rocm-cli-pytorch-engine-spec.md  rocm-cli-remaining-implementation-plan.md  strict-linting-plan.md
scripts/: acceptance-install-upgrade-tui-uninstall.ps1  acceptance-install-upgrade-tui-uninstall.sh  atom_therock_gpu_test.py  build-vendored-codex.sh  build_single_exe_release.py  check_powershell_syntax.py  comfyui_therock_gpu_test.py  cosmopolitan_feasibility.py  llama_cpp_therock_gpu_test.py  local_assistant_therock_gpu_test.py  package-linux-release.sh  package-windows-release.ps1  pytorch_therock_gpu_test.py  release_readiness.py  rust_cosmopolitan_spike.py  setup-cosmocc.sh  setup-wsl-portable-build-deps.sh  sglang_therock_gpu_test.py  single_exe_release_gate.py  smoke_local.py  therock_sdk_install_test.py  tui_e2e_smoke.py  verify_pinned_keys.py  vllm_therock_gpu_test.py  wsl_preflight.py  wsl_setup_rocdxg.sh  xfail_expectations_hint.py
tests/e2e-cucumber/: Cargo.toml  README.md  expectations.toml
tests/e2e-cucumber/features/: chat.feature  dash.feature  diagnose.feature  examine.feature  install_lifecycle.feature  model_serving.feature  networking.feature  runtime_setup.feature
tests/e2e-cucumber/src/: capability.rs  expectation.rs  installer_fixture.rs  lib.rs  mock_server.rs  model_id.rs  panic_capture.rs  report.rs
tests/e2e-cucumber/tests/: e2e.rs
tests/e2e-cucumber/tests/e2e/: chat_steps.rs  dash_steps.rs  diagnose_steps.rs  examine_steps.rs  lifecycle_steps.rs  runtime_steps.rs  serving_steps.rs  tui_driver.rs
xtask/: Cargo.toml
xtask/src/: affected.rs  demos.rs  e2e.rs  e2e_report.rs  main.rs  manifest.rs  package.rs  paths.rs  powershell.rs  signing.rs  tpn.rs  verify_commits.rs  verify_pinned_keys.rs
(+32 files in other folders)
