[workspace]
members = [
  "apps/rocm",
  "apps/rocmd",
  "crates/rocm-core",
  "crates/rocm-engine-protocol",
  "engines/llama-cpp",
  "engines/atom",
  "engines/pytorch",
  "engines/lemonade",
  "engines/sglang",
  "engines/vllm",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/powderluv/rocm-cli"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["libc", "use-dev-tty"] }
directories = "6.0"
keyring-core = "1.0.0"
libc = "0.2"
rand = "0.8"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
rpassword = "7.5"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["oid"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"
