[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rocm-core = { path = "../crates/rocm-core" }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
