[package]
name = "rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
flate2 = "1.1"
keyring-core.workspace = true
ratatui.workspace = true
rocm-core = { path = "../../crates/rocm-core" }
# rocm-dash unified dashboard launch. The
# telemetry daemon + ratatui-0.30 TUI are launched from the `dash` verb; tokio
# drives the async daemon/TUI from the otherwise-sync `rocm` binary.
# (rocm-dash-core is pulled in transitively by the two below — not a direct dep.)
rocm-dash-daemon = { path = "../../crates/rocm-dash-daemon" }
rocm-dash-tui = { path = "../../crates/rocm-dash-tui" }
tokio = { workspace = true }
rocm-engine-atom = { path = "../../engines/atom" }
rocm-engine-lemonade = { path = "../../engines/lemonade" }
rocm-engine-llama-cpp = { path = "../../engines/llama-cpp" }
rocm-engine-pytorch = { path = "../../engines/pytorch" }
rocm-engine-protocol = { path = "../../crates/rocm-engine-protocol" }
rocm-engine-sglang = { path = "../../engines/sglang" }
rocmd = { path = "../rocmd" }
rocm-engine-vllm = { path = "../../engines/vllm" }
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tar = "0.4"
ureq = { version = "2.12", features = ["native-certs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0", features = ["rt-tokio-crypto-rust"] }
