[package]
name = "rocmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
rocm-core = { path = "../../crates/rocm-core" }
rocm-engine-protocol = { path = "../../crates/rocm-engine-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
ureq = { version = "2.12", features = ["native-certs"] }
