[package]
name = "e2e-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
maud = "0.27"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
