[package]
name = "rocm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[build-dependencies]
cc = "1"

[dependencies]
anyhow.workspace = true
directories.workspace = true
libc.workspace = true
rand.workspace = true
regex = "1"
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml = "0.8"
ureq = { version = "2.12", features = ["native-certs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading"] }
