[package]
name = "rocm-dash-collectors"
version.workspace = true
# Transplanted from rocm-dash (EAI-6871). Held at edition 2021 for the initial
# green transplant; migrated to the workspace edition (2024) as a separate step.
edition = "2021"
rust-version.workspace = true
license.workspace = true

[dependencies]
rocm-dash-core = { path = "../rocm-dash-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
regex = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
sysinfo = "0.34"
bollard = "0.17"
tokio = { version = "1", features = ["full"] }
# HTTP partition: collectors keep reqwest 0.12 (vLLM Prometheus scrape, plain
# localhost HTTP). ureq stays the rocm-cli sync default elsewhere.
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
