[package]
name = "rocm-dash-core"
version.workspace = true
# Transplanted from rocm-dash; migrated to the workspace edition (2024).
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
toml = "0.8"
dirs = "6"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
