[package]
name = "rocm-dash-daemon"
version.workspace = true
# Transplanted from rocm-dash; migrated to the workspace edition (2024).
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rocm_dash_daemon"
path = "src/lib.rs"

[dependencies]
rocm-dash-core = { path = "../rocm-dash-core" }
rocm-dash-collectors = { path = "../rocm-dash-collectors" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
color-eyre = "0.6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
