[package]
name = "e2e-cucumber"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
cucumber = { version = "0.23", features = ["output-json", "output-junit"] }
maud = "0.27"
reqwest = { version = "0.13", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio.workspace = true

[[test]]
name = "e2e"
harness = false
